Fix mobile visibility

--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,12 @@ body {
     color: var(--main-color);
     font-family: 'Fira Code';
     padding: 10px;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    margin: auto;
+    height: 100vh;
+    width: 100vw;
+    overflow-x: hidden;
 }
 
 .bi {
@@ -41,7 +47,7 @@ a:visited {
 p {
     margin-top: 5px;
     margin-bottom: 5px;
-    white-space: pre;
+    white-space: pre-wrap;
 }
 
 .commands {
